# nforth

./: Cargo.toml
examples/: arrays.forth  recursion.forth
src/: forth.rs  lib.rs  main.rs  parser.rs
