[package]
name = "nforth"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.release]
opt-level = "z"       # Optimize for the smallest code size
lto = true            # Enable Link Time Optimization (LTO)
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but reducing binary size
panic = "abort"       # Use 'abort' instead of 'unwind' for panic handling
# strip = "debuginfo"   # Remove debug information
overflow-checks = false     # Disable integer overflow checks.
debug-assertions = false
debug  = true
